--- a/first.html
+++ b/first.html
@@ -1,9 +1,9 @@
 <html>
 <body>
 
-<h1>This is heading 1</h1>
-<h2>This is heading 2</h2>
-<h3>This is heading 3</h3>
+<h1>my name is taimoor khalid</h1>
+<h2>my father name is muhammad khalid</h2>
+<h3>my brother name is muhammad mubashir</h3>
 <h4>This is heading 4</h4>
 <h5>This is heading 5</h5>
 <h6>This is heading 6</h6>
